src/snapshots/cornercase__ui__tests__splits__a_pane_landing_on_an_edge_tints_that_half.snap
---
source: src/ui.rs
assertion_line: 6916
expression: "landing(Place::Below)"
---
TestBackend { buffer: Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 18 },
    content: [
        "  ⌕ search projects, workspaces, tabs                    │ $ left              │ $ top              ",
        "                                                         │                     │                    ",
        " Projects                      │ Workspaces              │                     │                    ",
        "                               │                         │                     │                    ",
        "▌ ~ (1)                        │                         │                     │                    ",
        "                               │                         │                     │                    ",
        "  + New                        │                         │                     │                    ",
        "                               │                         │                     │                    ",
        "                               │                         │                     │                    ",
        "                               │                         │                     ├────────────────────",
        "                               │                         │                     │ $ bottom           ",
        "                               │                         │                     │                    ",
        "                               │                         │                     │                    ",
        "                               │                         │      move here      │                    ",
        " ───────────────────────────── │                         │                     │                    ",
        "  Settings                     │                         │                     │                    ",
        "  Usage                        │                         │                     │                    ",
        "  Quit                         │                         │                     │                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: DarkGray, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 37, y: 0, fg: Reset, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 56, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 0, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 79, y: 0, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 1, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 79, y: 1, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 2, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 43, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 2, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 79, y: 2, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 3, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 3, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 79, y: 3, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Cyan, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: White, bg: Indexed(236), underline: Reset, modifier: BOLD,
        x: 3, y: 4, fg: DarkGray, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 7, y: 4, fg: Reset, bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 31, y: 4, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 4, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 79, y: 4, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 5, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 5, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 79, y: 5, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 6, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 6, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 79, y: 6, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 7, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 7, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 79, y: 7, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 8, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 8, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 79, y: 8, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 9, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 9, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 9, fg: Reset, bg: Indexed(236), underline: Reset, modifier: DIM,
        x: 79, y: 9, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 10, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 10, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 10, fg: Reset, bg: Indexed(236), underline: Reset, modifier: DIM,
        x: 79, y: 10, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 11, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 11, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 11, fg: Reset, bg: Indexed(236), underline: Reset, modifier: DIM,
        x: 79, y: 11, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 12, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 12, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 12, fg: Reset, bg: Indexed(236), underline: Reset, modifier: DIM,
        x: 79, y: 12, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 13, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 13, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 13, fg: Reset, bg: Indexed(236), underline: Reset, modifier: DIM,
        x: 63, y: 13, fg: Black, bg: Cyan, underline: Reset, modifier: BOLD | DIM,
        x: 74, y: 13, fg: Reset, bg: Indexed(236), underline: Reset, modifier: DIM,
        x: 79, y: 13, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 14, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 14, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 14, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 14, fg: Reset, bg: Indexed(236), underline: Reset, modifier: DIM,
        x: 79, y: 14, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 15, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 15, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 15, fg: Reset, bg: Indexed(236), underline: Reset, modifier: DIM,
        x: 79, y: 15, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 16, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 16, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 16, fg: Reset, bg: Indexed(236), underline: Reset, modifier: DIM,
        x: 79, y: 16, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 17, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 17, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 17, fg: Reset, bg: Indexed(236), underline: Reset, modifier: DIM,
        x: 79, y: 17, fg: Indexed(239), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}, scrollback: Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 0 }
}, cursor: true, pos: (86, 0) }
