src/snapshots/cornercase__ui__tests__splits__panes_are_drawn_with_dividers_that_join.snap
---
source: src/ui.rs
assertion_line: 6898
expression: render(&v).backend()
---
"  ⌕ search projects, workspaces, tabs                    │ $ left              │ $ top              "
"                                                         │                     │                    "
" Projects                      │ Workspaces              │                     │                    "
"                               │                         │                     │                    "
"▌ ~ (1)                        │                         │                     │                    "
"                               │                         │                     │                    "
"  + New                        │                         │                     │                    "
"                               │                         │                     │                    "
"                               │                         │                     │                    "
"                               │                         │                     ├────────────────────"
"                               │                         │                     │ $ bottom           "
"                               │                         │                     │                    "
"                               │                         │                     │                    "
"                               │                         │                     │                    "
" ───────────────────────────── │                         │                     │                    "
"  Settings                     │                         │                     │                    "
"  Usage                        │                         │                     │                    "
"  Quit                         │                         │                     │                    "
