src/snapshots/cornercase__ui__tests__splits__without_room_for_every_pane_only_the_active_one_is_drawn.snap
---
source: src/ui.rs
assertion_line: 6289
expression: "render_sized(&v, W, 6).backend()"
---
"  ⌕ search projects, workspaces, tabs                    │ $ top                                    "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"  + new project                │                         │                                          "
"  settings                     │                         │                                          "
